src/record/snapshots/asupersync__record__task__tests__task_record_budget_2.snap
---
source: src/record/task.rs
assertion_line: 2078
expression: "scrub_task_record_state(serde_json::to_value(&record).expect(\"serialize budget\"))"
---
{
  "cancel_epoch": 0,
  "created_at": 0,
  "deadline": null,
  "heap_index": null,
  "id": {
    "generation": 1,
    "index": 6,
    "kind": "TaskId"
  },
  "is_local": false,
  "last_polled_step": 0,
  "next_in_queue": null,
  "owner": {
    "generation": 1,
    "index": 7,
    "kind": "RegionId"
  },
  "pinned_worker": null,
  "polls_remaining": 100,
  "prev_in_queue": null,
  "queue_tag": 0,
  "sched_generation": 0,
  "sched_priority": 0,
  "total_polls": 0
}
