src/record/snapshots/asupersync__record__task__tests__task_record_cancel_reason_1.snap
---
source: src/record/task.rs
assertion_line: 2048
expression: "scrub_task_record_state(serde_json::to_value(&record).expect(\"serialize cancel reason\"))"
---
{
  "cancel_epoch": 1,
  "created_at": 0,
  "deadline": null,
  "heap_index": null,
  "id": {
    "generation": 1,
    "index": 3,
    "kind": "TaskId"
  },
  "is_local": false,
  "last_polled_step": 0,
  "next_in_queue": null,
  "owner": {
    "generation": 1,
    "index": 4,
    "kind": "RegionId"
  },
  "pinned_worker": null,
  "polls_remaining": 5,
  "prev_in_queue": null,
  "queue_tag": 0,
  "sched_generation": 0,
  "sched_priority": 0,
  "total_polls": 0
}
